第二版完成

--- a/templates/index.html
+++ b/templates/index.html
@@ -12,5 +12,82 @@
       <td>現金總額:{{data['total']}}元</td>
     </tr>
   </table>
+  <h3>現金金流更動紀錄</h3>
+  <table class="table table-bordered">
+    <thead>
+      <tr>
+        <th scope="col">ID</th>
+        <th scope="col">台幣</th>
+        <th scope="col">美金</th>
+        <th scope="col">註記</th>
+        <th scope="col">時間</th>
+        <th scope="col">刪除資料</th>
+      </tr>
+    </thead>
+    <tbody>
+      {% for data in data['cash_result']%}
+      <tr>
+        <td>{{data[0]}}</td>
+        <td>{{data[1]}}</td>
+        <td>{{data[2]}}</td>
+        <td>{{data[3]}}</td>
+        <td>{{data[4]}}</td>
+        <td>
+          <!-- action會指定回傳到某個url 而post是更新的資料... -->
+          <form action="cash-delete" method="post">
+            <input type="hidden" name="id" value="{{data[0]}}" />
+            <!-- 把id的值input使他看不到並回傳後端server -->
+            <button class="btn btn-primary">刪除該筆資料</button>
+          </form>
+        </td>
+      </tr>
+      {% endfor %}
+    </tbody>
+  </table>
+</div>
+
+<hr />
+
+<div id="stock-info">
+  <h2>股票庫存</h2>
+  <table class="table table-bordered">
+    <thead>
+      <tr>
+        <th scope="col">股票代號</th>
+        <th scope="col">持有股數</th>
+        <th scope="col">目前股價</th>
+        <th scope="col">目前市值</th>
+        <th scope="col">股票資產占比(%)</th>
+        <th scope="col">總成本(包含手續費)</th>
+        <th scope="col">平均成本</th>
+        <th scope="col">報酬率(%)</th>
+        <th scope="col">目前獲利(元)</th>
+      </tr>
+    </thead>
+    <tbody>
+      {%for d in data['stock_info']%}
+      <tr>
+        <th>{{d['stock_id']}}</th>
+        <th>{{d['shares']}}</th>
+        <th>{{d['current_price']}}</th>
+        <th>{{d['total_value']}}</th>
+        <th>{{d['value_percenatge']}}</th>
+        <th>{{d['stock_cost']}}</th>
+        <th>{{d['average_cost']}}</th>
+        <th>{{d['rate_of_return']}}</th>
+        <th>{{d['stock_profit']}}</th>
+        <td>
+          <!-- action會指定回傳到某個url 而post是更新的資料... -->
+          <form action="stock-delete" method="post">
+            <input type="hidden" name="id2" value="{{d['stock_id']}}" />
+            <!-- 把id的值input使他看不到並回傳後端server -->
+            <button class="btn btn-primary">刪除該筆資料</button>
+          </form>
+        </td>
+      </tr>
+
+      {%endfor%}
+    </tbody>
+  </table>
 </div>
 {% endblock %}
